--- a/adult_human.html
+++ b/adult_human.html
@@ -5,7 +5,7 @@
     <head>
      <mate charset="UTF-8">
         <title>大人の方and大きいお子様がいる家族</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     </head>
     <!-- ヘッダーここまで -->
     <body>
