--- a/children_and_animals.html
+++ b/children_and_animals.html
@@ -5,7 +5,7 @@
 <head>
     <mate charset="UTF-8">
         <title>お子様andペットがいる家族</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 <!-- ヘッダーここまで -->
 
@@ -17,18 +17,18 @@
                     <h1>お子様andペットがいる家族</h1>
                     <!-- メイン -->
                     <main>
-                        <img src="images/children_and_animals.png" alt="お子様とペットのイラスト" width=320px;>
+                        <img src="children_and_animals.png" alt="お子様とペットのイラスト" width=320px;>
                         <p>子供、ペットは体が弱かったり触ってはダメなものの判断がわからなかったりします。注意して大事な家族を守りましょう。
                         </p>
                         <div class="box">
                             <span class="box-title">植物</span>
-                                <img src="images/aromaticus.jpg" alt="アロマティカスの写真" width=320px;>
+                                <img src="aromaticus.jpg" alt="アロマティカスの写真" width=320px;>
                                 <p>まずは匂いで玄関先などにアロマティカスを置いてみるのはいかがですか？<br>
                                     他の植物では虫を寄せ付けてしまいますが、アロマティカスは寄せ付けない匂いです。又気分を落ち着かせるのにも効果的なにおいで落ち着きます。<br>
                                     害のある植物ではないためお子様やペットにも安全です。そして見た目もつぶつぶしていてかわいらしいです。</p>
                                 <p>ハッカという手もあります。ハッカですと薬局でもハッカ油は打ってますしアロマティカスですと寒い季節には弱く冬に販売していない事が多いですがハッカ油でしたら年中購入可能です。<br>
                                     保冷剤を使いハッカ油活用すれば対策可能です。またうまく作ればカラフルでおしゃれに作れます。ぜひ作ってみてください。</p>
-                                <img src="images/aroma.jpg" alt="おしゃれな虫よけの写真" width=320px;>
+                                <img src="aroma.jpg" alt="おしゃれな虫よけの写真" width=320px;>
                         </div>
 
 
@@ -45,7 +45,7 @@
                         </div>
                          <div class="box">
                             <span class="box-title">おすすめ</span>
-                                <p>現在私も子供がいますが、引っ越時まずカギをもらってから初めに燻製タイプのもの(バルサン)を使いました。時間を置いた方が効果が高まるとの事だった為一晩時間を置いてから換気しました。<br>換気が完了したら隙間をなくす作業に取り掛かりました。ドア・玄関を隙間テープで埋め、賃貸用の壁紙・床タイルシートを使い傷予防がてら壁とエアコン・換気口・インターフォンの設置面隙間埋め少しの隙間でも油断なりません。まず壁と床の間にある巾木は元々隙間埋めの為使われます。害虫とは直接関係あるとは限りませんがその隙間でのごみほこりが溜まりやすくなる為そうすると害虫が寄る確率が高くなる為隙間を排除する為にもあります。設置が甘いと隙間が生まれる可能性があります。アパートやマンションなどで場合よって隙間が起きやすいです。隙間があったらマスキングテープで止めるのが良いでしょう。<br><div class="baseboard"><img src="images/baseboard.jpg" alt="内装隙間埋めの写真"></div>私は見た目も安全性も取り壁紙・床タイルを張った後巾木のクッションテープタイプで隙間を埋めます。そして業者も掃除していると思いますが最終掃除をします。そこから荷物を運びます。換気扇などもフィルターなどを漏れないか確認します。最終隙間がないか確認し換気扇フィルターしているかどうか、外エアコンスリムダクト隙間ないか隙間があればエアコンのパテでダクト隙間埋め荷物に害虫がいっしょにくっついて一緒に侵入の可能性、荷物搬入時は入口は基本開けっ放しになる為その際に入口から侵入していることがあります。その為二回目の燻製タイプ使用し換気してから掃除します。そしたら外に上記で紹介したアロマティカスを室内外に設置して玄関、ベランダにハッカ油を使用した保冷剤でアレンジしたものを準備し設置します。室外には除去剤、室内にはマモルーム・超音波を使用します。通販で買い物したら段ボールに害虫がついている可能性もある為すぐ捨てるか難しい場合は室外に専用のごみ箱を用意しそこに入れています。<br>私の一個人の意見のですが、参考に出来る所があれば是非参考にしていただけたら嬉しいです！！</p>
+                                <p>現在私も子供がいますが、引っ越時まずカギをもらってから初めに燻製タイプのもの(バルサン)を使いました。時間を置いた方が効果が高まるとの事だった為一晩時間を置いてから換気しました。<br>換気が完了したら隙間をなくす作業に取り掛かりました。ドア・玄関を隙間テープで埋め、賃貸用の壁紙・床タイルシートを使い傷予防がてら壁とエアコン・換気口・インターフォンの設置面隙間埋め少しの隙間でも油断なりません。まず壁と床の間にある巾木は元々隙間埋めの為使われます。害虫とは直接関係あるとは限りませんがその隙間でのごみほこりが溜まりやすくなる為そうすると害虫が寄る確率が高くなる為隙間を排除する為にもあります。設置が甘いと隙間が生まれる可能性があります。アパートやマンションなどで場合よって隙間が起きやすいです。隙間があったらマスキングテープで止めるのが良いでしょう。<br><div class="baseboard"><img src="baseboard.jpg" alt="内装隙間埋めの写真"></div>私は見た目も安全性も取り壁紙・床タイルを張った後巾木のクッションテープタイプで隙間を埋めます。そして業者も掃除していると思いますが最終掃除をします。そこから荷物を運びます。換気扇などもフィルターなどを漏れないか確認します。最終隙間がないか確認し換気扇フィルターしているかどうか、外エアコンスリムダクト隙間ないか隙間があればエアコンのパテでダクト隙間埋め荷物に害虫がいっしょにくっついて一緒に侵入の可能性、荷物搬入時は入口は基本開けっ放しになる為その際に入口から侵入していることがあります。その為二回目の燻製タイプ使用し換気してから掃除します。そしたら外に上記で紹介したアロマティカスを室内外に設置して玄関、ベランダにハッカ油を使用した保冷剤でアレンジしたものを準備し設置します。室外には除去剤、室内にはマモルーム・超音波を使用します。通販で買い物したら段ボールに害虫がついている可能性もある為すぐ捨てるか難しい場合は室外に専用のごみ箱を用意しそこに入れています。<br>私の一個人の意見のですが、参考に出来る所があれば是非参考にしていただけたら嬉しいです！！</p>
                         </div>
 
                     </main>
