--- a/house.html
+++ b/house.html
@@ -5,7 +5,7 @@
 <head>
     <mate charset="UTF-8">
         <title>住み心地がいい家を選ぼう</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 <!-- ヘッダーここまで -->
 
@@ -53,7 +53,7 @@
                             </p>
                             <h2>ポストがドアと分離している</h2>
                             <div class="door">
-                                <p class="text"><img src="images/door.webp" width=320px;
+                                <p class="text"><img src="door.webp" width=320px;
                                         alt="ドアのイラスト">マンションやアパートにありがちな、ドアポスト。玄関ドアに直接穴があいているタイプのポストですが、この穴が実は、新聞や郵便物が挟み込まれている間、彼らの格好の侵入経路と化します。<br>
                                     できれば、ポストは玄関ドアとは別の場所に、箱として設置されている物件を選びましょう。</p>
                             </div>
