--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <mate charset="UTF-8">
         <title>害虫対策～自分の住処は自分で守ろう～</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="style.css" />
 
 
 </head>
@@ -58,31 +58,31 @@
                             <table>
                               
                                 <tr>
-                                    <th><img src="images/hamster.jpg" alt="ハムスターのアイコン" class="icon"><img src="images/risu.jpg" alt="リスのアイコン" class="icon"><br>リス・ハムスター</th>
+                                    <th><img src="hamster.jpg" alt="ハムスターのアイコン" class="icon"><img src="risu.jpg" alt="リスのアイコン" class="icon"><br>リス・ハムスター</th>
                                     <td>好んで虫を捕食しますけど、放し飼いにすると、小さな隙間に入って出てこなかったり、逃走する危険があります。注意を。</td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/slow-loris.jpg" alt="スローロリスのアイコン" class="icon"><br>スローロリス</th>
+                                    <th><img src="slow-loris.jpg" alt="スローロリスのアイコン" class="icon"><br>スローロリス</th>
                                     <td>可愛らしい外見とは裏腹に、昆虫食のサル類なので、害虫にとっては天敵です。<br>しかしスローロリスが絶滅の危機に瀕しており日本でも、原則としてスローロリスの取引は禁止になっています。<b>環境大臣の登録票が交付された場合に限り、購入・販売が許可されています。ただ、値段も高く、飼育方法も複雑です。</b></td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/cat.jpg" alt="ねこのアイコン" class="icon"><br>ネコ</th>
+                                    <th><img src="cat.jpg" alt="ねこのアイコン" class="icon"><br>ネコ</th>
                                     <td>十分にえさを与えられている飼い猫が、積極的に害虫を捕食することはありません。しかし追いかけて捕まえたりし遊んでいるうちに、害虫は永眠します。<br>ただし、<b>献上品のように飼い主に献上してくれる可能性が０ではなくそれに対して驚いたり嫌がると信頼関係にも影響がある為心を少し強く持っている方にはいいかもしれません。</b></td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/kumo.jpg" alt="アシダカグモのアイコン" class="icon"><br>アシダカグモ</th>
+                                    <th><img src="kumo.jpg" alt="アシダカグモのアイコン" class="icon"><br>アシダカグモ</th>
                                     <td>アシダカグモは素早い動きで獲物を狩ります。素早く動く害虫もアシダカグモにはかないません。</td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/yamori.jpg" alt="ヤモリのアイコン" class="icon"><br>ヤモリ</th>
+                                    <th><img src="yamori.jpg" alt="ヤモリのアイコン" class="icon"><br>ヤモリ</th>
                                     <td>ヤモリはよく動く小さな虫が大好物で、昔からシロアリやハエ、害虫を食べてくれる動物としてありがたがられていました。しかし、<b>ヤモリの体長はあまり大きくないため成長した害虫だと捕食できません。</b></td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/fence-lizard.jpg" alt="トカゲのアイコン" class="icon"><br>トカゲ</th>
+                                    <th><img src="fence-lizard.jpg" alt="トカゲのアイコン" class="icon"><br>トカゲ</th>
                                     <td>トカゲはハエやアリなどの虫を餌にしています。虫である害虫も、トカゲにとって大好物ともいえるでしょう。トカゲは歯がないため餌を丸のみにします。その消化能力はかなり強力であるといえるでしょう。</td>
                                 </tr>
                                 <tr>
-                                    <th><img src="images/frog.jpg" alt="カエルのアイコン" class="icon"><br>カエル</th>
+                                    <th><img src="frog.jpg" alt="カエルのアイコン" class="icon"><br>カエル</th>
                                     <td>両生類であるカエルもトカゲと同様、幼虫の小さい害虫であればを食べることができます。</td>
                                 </tr>
                                
