--- a/insect_repellent.html
+++ b/insect_repellent.html
@@ -6,7 +6,7 @@
 <head>
     <mate charset="UTF-8">
         <title>害虫対策グッズ紹介</title>
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="style.css">
 </head>
 <!-- ヘッダーここまで -->
 
@@ -33,13 +33,13 @@
                             
                             <p>設置タイプはスプレーのように他の箇所に影響がないもので、置くだけで虫を撃退したり、近寄るのを防ぐ効果があります。また香りがいいものもあるので、ストレスなく使用できます。</p>
                             <h2>餌型殺虫剤</h2>
-                            <p><div class="bleackcap"><img src="images/bleackcap.jpg" alt="ブラックキャップの写真"></div>殺虫成分が含まれている餌で駆除できます。死んだ虫を同じ種類の虫が餌にする場合、その虫にも効果があるようなタイプも増えています。また餌を食べた虫が産んだ卵にも影響があるタイプもあるので、根こそぎ退治したい方におすすめです。
+                            <p><div class="bleackcap"><img src="bleackcap.jpg" alt="ブラックキャップの写真"></div>殺虫成分が含まれている餌で駆除できます。死んだ虫を同じ種類の虫が餌にする場合、その虫にも効果があるようなタイプも増えています。また餌を食べた虫が産んだ卵にも影響があるタイプもあるので、根こそぎ退治したい方におすすめです。
                             </p>
                             <h2>線香型</h2>
                             <p>仏具の線香のように火をつけて、煙に含まれる殺虫成分で駆除するタイプです。和風な香りがついているものもあり、夏によく蚊取り用の渦巻き型の線香が販売されています。設置するケースのデザイン性が高いものもあり、夏の風物詩にもなっています。
                             </p>
                             <h2>粘着型</h2>
-                            <p><div class="hoihoi"><img src="images/hoihoi.jpg" alt="ゴキブリホイホイの写真"></div>殺虫成分が含まれているもの自体は少ないので、設置した吸着シートが虫を誘惑する匂いを放っており、シートに触れると強力な粘着力で、虫の身動きが取れなくなり、暴れれば暴れるほど動けなくなります。その後は任意の時に、設置物をそのまま捨てるだけなので片付けも簡単です。
+                            <p><div class="hoihoi"><img src="hoihoi.jpg" alt="ゴキブリホイホイの写真"></div>殺虫成分が含まれているもの自体は少ないので、設置した吸着シートが虫を誘惑する匂いを放っており、シートに触れると強力な粘着力で、虫の身動きが取れなくなり、暴れれば暴れるほど動けなくなります。その後は任意の時に、設置物をそのまま捨てるだけなので片付けも簡単です。
                             </p>
                             <h2>忌避剤・超音波型</h2>
                             <p>殺虫効果はありませんが、虫が嫌いな臭いや音を出して、その場所に寄せ付けなくするタイプです。殺虫剤を頻繁に使用できないキッチンや食器棚、殺虫剤を使用したくない場所などに設置します。
