--- a/everyone.html
+++ b/everyone.html
@@ -5,7 +5,7 @@
 <head>
   <mate charset="UTF-8">
     <title>みんな対策</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <!-- ヘッダーここまで -->
 
@@ -16,7 +16,7 @@
         <div class="titleArea">
           <h1>みんな対策</h1>
           <!-- メイン -->
-          <main><div class="group_people_no_dog"><img src="group_people_no_dog.png" alt="いろんな方のイラスト"></div>
+          <main><div class="group_people_no_dog"><img src="images/group_people_no_dog.png" alt="いろんな方のイラスト"></div>
             <p>排水菅周りはその構造上さまざまな場所に隙間ができ、ここから害虫が侵入するケースが考えられるでしょう。この侵入を防ぐには、隙間を補修する粘土タイプのパテなどを使う必要があります。
               本記事では、害虫対策の一つとして、パテの正しい使い方や注意点についてご紹介します。排水口・排水管ってどこを指している？なぜ排水管から害虫が侵入してくるの？排水菅の隙間ができやすい箇所はどこ？</p>
             <div class="box">
