--- a/adult_human.html
+++ b/adult_human.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE HTML>
 <html>
     <!-- ヘッダー -->
     <head>
      <mate charset="UTF-8">
         <title>大人の方and大きいお子様がいる家族</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     </head>
     <!-- ヘッダーここまで -->
     <body>
